--- a/hermes/resources/hermes/doc.html
+++ b/hermes/resources/hermes/doc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 charecters -->
-    <script type="module" src="./doc_style.js"></script>
+    <script type="module" src="doc_style.js"></script>
 
 </head>
 <body>
